# ASC-Mega-One

demos/: CMakeLists.txt  demo_matrix.cpp  demo_vector.cpp  test_lapack.cpp  test_simd_functions.cpp
py_demos/: demo_vector.py  timing_matmat.py
src/: bind_bla.cpp  lapack_interface.hpp  matrix.hpp  matrixexpr.hpp  mutex.hpp  simd_functions.hpp  taskmanager.cpp  taskmanager.hpp  timer.cpp  timer.hpp  vecexpr.hpp  vector.hpp
